--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,9 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //RecyclerView
+    implementation 'androidx.recyclerview:recyclerview-selection:1.1.0'
+    //RoundedImageView
+    implementation 'com.makeramen:roundedimageview:2.3.0'
 }
