--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
+*.iml
+.gradle
+/local.properties
+/.idea/caches
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+/.idea/navEditor.xml
+/.idea/assetWizardSettings.xml
+.DS_Store
+/build
+/captures
+.externalNativeBuild
+.cxx
+local.properties
+.idea
+# 깃 이그노어 관련 추가설정 JungInLee
 # Created by https://www.toptal.com/developers/gitignore/api/androidstudio,kotlin
 # Edit at https://www.toptal.com/developers/gitignore?templates=androidstudio,kotlin
 
