--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,10 @@ dependencies {
 
     // retrofit2 app수준에 build.gradle에 의존성 추가
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    // Gson 변환기 라이브러리
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    // Scalars 변환기 라이브러리
+    implementation 'com.squareup.retrofit2:converter-scalars:2.6.4'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -46,4 +49,31 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview-selection:1.1.0'
     //RoundedImageView
     implementation 'com.makeramen:roundedimageview:2.3.0'
+
+    // lombok
+    compileOnly 'org.projectlombok:lombok:1.18.16'
+    annotationProcessor 'org.projectlombok:lombok:1.18.16'
+
+    // google play service
+    implementation 'com.google.android.gms:play-services-auth:20.3.0'
+
+    //Kakao SDK
+    implementation "com.kakao.sdk:v2-user:2.8.3" // 카카오 로그인
+    implementation "com.kakao.sdk:v2-talk:2.8.3" // 친구, 메시지(카카오톡)
+    implementation "com.kakao.sdk:v2-story:2.8.3" // 카카오스토리
+    implementation "com.kakao.sdk:v2-link:2.8.3" // 메시지(카카오링크)
+    implementation "com.kakao.sdk:v2-navi:2.8.3" // 카카오내비
+
+
+    //네이버 로그인
+    //implementation 'com.naver.nid:naveridlogin-android-sdk:4.2.6'
+    /*//네이버 로그인
+    implementation files('lib\\oauth-5.2.0.arr')
+    *//* implementation 'com.android.support:appcompat-v7:28.0.0'
+     implementation 'com.android.support:support-core-utils:28.0.0'
+     implementation 'com.android.support:customtabs:28.0.0'
+     implementation 'com.android.support:support-v4:28.0.0'*/
+
+    // 오픈소스 이미지 핸들링할 때 많이 사용되는 글라이드
+    implementation "com.github.bumptech.glide:glide:4.11.0"
 }
