--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,8 @@ android {
 }
 
 dependencies {
+    //네이버 지도
+    implementation 'com.naver.maps:map-sdk:3.16.0'
 
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
@@ -46,4 +48,6 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview-selection:1.1.0'
     //RoundedImageView
     implementation 'com.makeramen:roundedimageview:2.3.0'
+
+
 }
