랜드마크 리싸이클러뷰

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.myapplication"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:replace="android:appComponentFactory"
-    android:appComponentFactory="whateverString">
-
+    package="com.example.myapplication"
+    android:appComponentFactory="whateverString"
+    tools:replace="android:appComponentFactory">
     <!-- 인터넷 연결 허용, useClear~: Http연결 허용 -->
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name="com.example.login.KakaoApplication"
-
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -21,6 +19,13 @@
         android:theme="@style/Theme.MyApplication"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".Gwanghwamun"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
 
         <meta-data
             android:name="com.naver.maps.map.CLIENT_ID"
@@ -33,7 +38,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".landmarkRecycle"
             android:exported="false">
@@ -41,7 +45,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".MypageActivity"
             android:exported="false">
@@ -49,7 +52,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".HomeActivity"
             android:exported="false">
@@ -57,7 +59,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name="com.example.login.MainActivity"
             android:exported="true">
@@ -66,15 +67,17 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
-        <activity android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
+        <activity
+            android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
                 <!-- Redirect URI: "kakao{NATIVE_APP_KEY}://oauth" -->
@@ -83,7 +86,6 @@
                     android:scheme="kakao199bccdef624f00091e051cf8b686f78" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
