--- a/settings.gradle
+++ b/settings.gradle
@@ -10,12 +10,9 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
-        maven {
-            url 'https://devrepo.kakao.com/nexus/content/groups/public/'
-        }
-        maven {
-        url 'https://naver.jfrog.io/artifactory/maven/'
-        }
+        maven {url 'https://devrepo.kakao.com/nexus/content/groups/public/'}
+        maven {url 'https://naver.jfrog.io/artifactory/maven/'}
+        maven { url "https://jitpack.io" }
     }
 }
 rootProject.name = "My Application"
