--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,13 +43,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
-    // retrofit2 app수준에 build.gradle에 의존성 추가
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    // Gson 변환기 라이브러리
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    // Scalars 변환기 라이브러리
-    implementation 'com.squareup.retrofit2:converter-scalars:2.6.4'
-
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -62,7 +55,7 @@ dependencies {
     // google play service
     implementation 'com.google.android.gms:play-services-auth:20.3.0'
 
-//Kakao SDK
+    //Kakao SDK
     implementation "com.kakao.sdk:v2-user:2.8.3" // 카카오 로그인
     implementation "com.kakao.sdk:v2-talk:2.8.3" // 친구, 메시지(카카오톡)
     implementation "com.kakao.sdk:v2-story:2.8.3" // 카카오스토리
@@ -79,4 +72,17 @@ dependencies {
      implementation 'com.android.support:support-v4:28.0.0'*/
     // 오픈소스 이미지 핸들링할 때 많이 사용되는 글라이드
     implementation "com.github.bumptech.glide:glide:4.11.0"
+
+    /*------------------통신---------------------------------*/
+    //okhttp
+    implementation 'com.squareup.okhttp3:okhttp:3.4.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+
+    // retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    // Gson 변환기
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    // Scalars 변환기 라이브러리
+    implementation 'com.squareup.retrofit2:converter-scalars:2.6.4'
+    /*------------------통신---------------------------------*/
 }
